--- a/analyzer/strategy/pom.xml
+++ b/analyzer/strategy/pom.xml
@@ -32,11 +32,11 @@
             <artifactId>log4j</artifactId>
             <version>1.2.14</version>
         </dependency>        
-        <dependency>
+<!--        <dependency>
             <groupId>com.robotrader.adapter</groupId>
             <artifactId>moexiis</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>eu.verdelhan</groupId>
             <artifactId>ta4j</artifactId>
