--- a/analyzer/strategy/pom.xml
+++ b/analyzer/strategy/pom.xml
@@ -46,6 +46,7 @@
             <groupId>net.sf.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>2.3</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
